Fixing overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,14 @@ html, body {
 
 html{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;font-synthesis:none;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 html,button,input,select,textarea{font-family:sans-serif}
-body{line-height:1;margin:0}
+
+body {
+  line-height: 1;
+  margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
 table{border-collapse:collapse;border-spacing:0}
 img,svg{vertical-align:middle}
